src/snapshots/purs_oxide__parser__tests__parse_accessor_chain.snap
---
source: src/parser.rs
expression: "parse_expr(r#\" foo.bar.baz \"#)"
---
Located(
    SourceSpan {
        start: 1,
        end: 12,
    },
    Accessor(
        Located(
            SourceSpan {
                start: 1,
                end: 8,
            },
            Accessor(
                Located(
                    SourceSpan {
                        start: 1,
                        end: 4,
                    },
                    Var(
                        QualifiedName {
                            module: None,
                            name: Symbol {
                                text: "foo",
                            },
                        },
                    ),
                ),
                Symbol {
                    text: "bar",
                },
            ),
        ),
        Symbol {
            text: "baz",
        },
    ),
)
