src/snapshots/purs_oxide__parser__tests__parse_app_1.snap
---
source: src/parser.rs
expression: "parse_expr(r#\"f x y\"#)"
---
Located(
    SourceSpan {
        start: 0,
        end: 5,
    },
    App(
        Located(
            SourceSpan {
                start: 0,
                end: 1,
            },
            Var(
                QualifiedName {
                    module: None,
                    name: Symbol {
                        text: "f",
                    },
                },
            ),
        ),
        [
            Located(
                SourceSpan {
                    start: 2,
                    end: 3,
                },
                Var(
                    QualifiedName {
                        module: None,
                        name: Symbol {
                            text: "x",
                        },
                    },
                ),
            ),
            Located(
                SourceSpan {
                    start: 4,
                    end: 5,
                },
                Var(
                    QualifiedName {
                        module: None,
                        name: Symbol {
                            text: "y",
                        },
                    },
                ),
            ),
        ],
    ),
)
