src/snapshots/purs_oxide__parser__tests__parse_app_2.snap
---
source: src/parser.rs
expression: "parse_expr(r#\"f a.b (g x)\"#)"
---
Located(
    SourceSpan {
        start: 0,
        end: 11,
    },
    App(
        Located(
            SourceSpan {
                start: 0,
                end: 1,
            },
            Var(
                QualifiedName(
                    Symbol(
                        "f",
                    ),
                ),
            ),
        ),
        [
            Located(
                SourceSpan {
                    start: 2,
                    end: 5,
                },
                Accessor(
                    Located(
                        SourceSpan {
                            start: 2,
                            end: 3,
                        },
                        Var(
                            QualifiedName(
                                Symbol(
                                    "a",
                                ),
                            ),
                        ),
                    ),
                    Symbol(
                        "b",
                    ),
                ),
            ),
            Located(
                SourceSpan {
                    start: 6,
                    end: 11,
                },
                App(
                    Located(
                        SourceSpan {
                            start: 7,
                            end: 8,
                        },
                        Var(
                            QualifiedName(
                                Symbol(
                                    "g",
                                ),
                            ),
                        ),
                    ),
                    [
                        Located(
                            SourceSpan {
                                start: 9,
                                end: 10,
                            },
                            Var(
                                QualifiedName(
                                    Symbol(
                                        "x",
                                    ),
                                ),
                            ),
                        ),
                    ],
                ),
            ),
        ],
    ),
)
