src/snapshots/purs_oxide__parser__tests__parse_constraint.snap
---
source: src/parser.rs
expression: "parse_type(\"Eq a => a\")"
---
Located(
    SourceSpan {
        start: 0,
        end: 9,
    },
    Constrained {
        constraint: Located(
            SourceSpan {
                start: 0,
                end: 4,
            },
            TypeApp(
                Located(
                    SourceSpan {
                        start: 0,
                        end: 2,
                    },
                    TypeConstructor(
                        QualifiedName(
                            Symbol(
                                "Eq",
                            ),
                        ),
                    ),
                ),
                Located(
                    SourceSpan {
                        start: 3,
                        end: 4,
                    },
                    Var(
                        Symbol(
                            "a",
                        ),
                    ),
                ),
            ),
        ),
        body: Located(
            SourceSpan {
                start: 8,
                end: 9,
            },
            Var(
                Symbol(
                    "a",
                ),
            ),
        ),
    },
)
