src/snapshots/purs_oxide__parser__tests__parse_constraints.snap
---
source: src/parser.rs
expression: "parse_type(\"Eq a => Show a => a\")"
---
Located(
    SourceSpan {
        start: 0,
        end: 19,
    },
    Constrained {
        constraint: Located(
            SourceSpan {
                start: 0,
                end: 4,
            },
            TypeApp(
                Located(
                    SourceSpan {
                        start: 0,
                        end: 2,
                    },
                    TypeConstructor(
                        QualifiedName {
                            symbol: Symbol(
                                Id {
                                    value: 1,
                                },
                            ),
                            actually_qualified: false,
                        },
                    ),
                ),
                Located(
                    SourceSpan {
                        start: 3,
                        end: 4,
                    },
                    Var(
                        Symbol(
                            Id {
                                value: 2,
                            },
                        ),
                    ),
                ),
            ),
        ),
        body: Located(
            SourceSpan {
                start: 8,
                end: 19,
            },
            Constrained {
                constraint: Located(
                    SourceSpan {
                        start: 8,
                        end: 14,
                    },
                    TypeApp(
                        Located(
                            SourceSpan {
                                start: 8,
                                end: 12,
                            },
                            TypeConstructor(
                                QualifiedName {
                                    symbol: Symbol(
                                        Id {
                                            value: 3,
                                        },
                                    ),
                                    actually_qualified: false,
                                },
                            ),
                        ),
                        Located(
                            SourceSpan {
                                start: 13,
                                end: 14,
                            },
                            Var(
                                Symbol(
                                    Id {
                                        value: 2,
                                    },
                                ),
                            ),
                        ),
                    ),
                ),
                body: Located(
                    SourceSpan {
                        start: 18,
                        end: 19,
                    },
                    Var(
                        Symbol(
                            Id {
                                value: 2,
                            },
                        ),
                    ),
                ),
            },
        ),
    },
)
