src/snapshots/purs_oxide__parser__tests__parse_forall.snap
---
source: src/parser.rs
expression: "parse_type(\"forall x (y :: Symbol). Maybe x\")"
---
Located(
    SourceSpan {
        start: 0,
        end: 31,
    },
    ForAll {
        vars: [
            (
                Symbol(
                    Id {
                        value: 1,
                    },
                ),
                None,
            ),
            (
                Symbol(
                    Id {
                        value: 2,
                    },
                ),
                Some(
                    Located(
                        SourceSpan {
                            start: 15,
                            end: 21,
                        },
                        TypeConstructor(
                            QualifiedName {
                                symbol: Symbol(
                                    Id {
                                        value: 3,
                                    },
                                ),
                                actually_qualified: false,
                            },
                        ),
                    ),
                ),
            ),
        ],
        body: Located(
            SourceSpan {
                start: 24,
                end: 31,
            },
            TypeApp(
                Located(
                    SourceSpan {
                        start: 24,
                        end: 29,
                    },
                    TypeConstructor(
                        QualifiedName {
                            symbol: Symbol(
                                Id {
                                    value: 4,
                                },
                            ),
                            actually_qualified: false,
                        },
                    ),
                ),
                Located(
                    SourceSpan {
                        start: 30,
                        end: 31,
                    },
                    Var(
                        Symbol(
                            Id {
                                value: 1,
                            },
                        ),
                    ),
                ),
            ),
        ),
        skolem_scope: None,
    },
)
