src/snapshots/purs_oxide__parser__tests__parse_function_type.snap
---
source: src/parser.rs
expression: "parse_type(\"A -> B -> C\")"
---
Located(
    SourceSpan {
        start: 0,
        end: 11,
    },
    FunctionType(
        Located(
            SourceSpan {
                start: 0,
                end: 1,
            },
            TypeConstructor(
                QualifiedName {
                    module: None,
                    name: Symbol {
                        text: "A",
                    },
                },
            ),
        ),
        Located(
            SourceSpan {
                start: 5,
                end: 11,
            },
            FunctionType(
                Located(
                    SourceSpan {
                        start: 5,
                        end: 6,
                    },
                    TypeConstructor(
                        QualifiedName {
                            module: None,
                            name: Symbol {
                                text: "B",
                            },
                        },
                    ),
                ),
                Located(
                    SourceSpan {
                        start: 10,
                        end: 11,
                    },
                    TypeConstructor(
                        QualifiedName {
                            module: None,
                            name: Symbol {
                                text: "C",
                            },
                        },
                    ),
                ),
            ),
        ),
    ),
)
