src/snapshots/purs_oxide__parser__tests__parse_infix_expr.snap
---
source: src/parser.rs
expression: "parse_expr(r#\" 1 %+ 2 <$> 3 \"#)"
---
Located(
    SourceSpan {
        start: 1,
        end: 13,
    },
    Infix(
        Located(
            SourceSpan {
                start: 1,
                end: 2,
            },
            Literal(
                Integer(
                    1,
                ),
            ),
        ),
        [
            (
                Symbol(
                    QualifiedName {
                        module: None,
                        name: Symbol {
                            text: "%+",
                        },
                    },
                ),
                Located(
                    SourceSpan {
                        start: 6,
                        end: 7,
                    },
                    Literal(
                        Integer(
                            2,
                        ),
                    ),
                ),
            ),
            (
                Symbol(
                    QualifiedName {
                        module: None,
                        name: Symbol {
                            text: "<$>",
                        },
                    },
                ),
                Located(
                    SourceSpan {
                        start: 12,
                        end: 13,
                    },
                    Literal(
                        Integer(
                            3,
                        ),
                    ),
                ),
            ),
        ],
    ),
)
