src/snapshots/purs_oxide__parser__tests__parse_lam_1.snap
---
source: src/parser.rs
expression: "parse_expr(r#\"\\x -> y\"#)"
---
Located(
    SourceSpan {
        start: 0,
        end: 7,
    },
    Lam(
        [
            Located(
                SourceSpan {
                    start: 1,
                    end: 2,
                },
                Var(
                    Symbol(
                        Id {
                            value: 1,
                        },
                    ),
                ),
            ),
        ],
        Located(
            SourceSpan {
                start: 6,
                end: 7,
            },
            Var(
                QualifiedName {
                    symbol: Symbol(
                        Id {
                            value: 2,
                        },
                    ),
                    actually_qualified: false,
                },
            ),
        ),
    ),
)
