src/snapshots/purs_oxide__parser__tests__parse_lam_2.snap
---
source: src/parser.rs
expression: "parse_expr(r#\"\\_ y -> y\"#)"
---
Located(
    SourceSpan {
        start: 0,
        end: 9,
    },
    Lam(
        [
            Located(
                SourceSpan {
                    start: 1,
                    end: 2,
                },
                Wildcard,
            ),
            Located(
                SourceSpan {
                    start: 3,
                    end: 4,
                },
                Var(
                    Symbol {
                        [salsa id]: 0,
                        text: "y",
                    },
                ),
            ),
        ],
        Located(
            SourceSpan {
                start: 8,
                end: 9,
            },
            Var(
                QualifiedName {
                    symbol: Symbol {
                        [salsa id]: 0,
                        text: "y",
                    },
                    actually_qualified: false,
                },
            ),
        ),
    ),
)
