src/snapshots/purs_oxide__parser__tests__parse_record.snap
---
source: src/parser.rs
expression: "parse_type(\"{ foo :: Int | e }\")"
---
Located(
    SourceSpan {
        decl: Module(
            ModuleId {
                name: "Test",
            },
        ),
        start: 0,
        end: 18,
    },
    TypeApp(
        Located(
            SourceSpan {
                decl: Module(
                    ModuleId {
                        name: "Test",
                    },
                ),
                start: 0,
                end: 1,
            },
            TypeConstructor(
                QualifiedName {
                    module: Some(
                        ModuleId {
                            name: "Prim",
                        },
                    ),
                    name: Symbol {
                        text: "Record",
                    },
                },
            ),
        ),
        Located(
            SourceSpan {
                decl: Module(
                    ModuleId {
                        name: "Test",
                    },
                ),
                start: 2,
                end: 16,
            },
            Row {
                fields: [
                    (
                        Symbol {
                            text: "foo",
                        },
                        Located(
                            SourceSpan {
                                decl: Module(
                                    ModuleId {
                                        name: "Test",
                                    },
                                ),
                                start: 9,
                                end: 12,
                            },
                            TypeConstructor(
                                QualifiedName {
                                    module: None,
                                    name: Symbol {
                                        text: "Int",
                                    },
                                },
                            ),
                        ),
                    ),
                ],
                rest: Some(
                    Located(
                        SourceSpan {
                            decl: Module(
                                ModuleId {
                                    name: "Test",
                                },
                            ),
                            start: 15,
                            end: 16,
                        },
                        Var(
                            Symbol {
                                text: "e",
                            },
                        ),
                    ),
                ),
            },
        ),
    ),
)
