src/snapshots/purs_oxide__parser__tests__parse_record_expr-2.snap
---
source: src/parser.rs
expression: "parse_expr(r#\" { foo: 1 } \"#)"
---
Located(
    SourceSpan {
        start: 1,
        end: 11,
    },
    Literal(
        Object(
            [
                (
                    Symbol(
                        "foo",
                    ),
                    Located(
                        SourceSpan {
                            start: 8,
                            end: 9,
                        },
                        Literal(
                            Integer(
                                1,
                            ),
                        ),
                    ),
                ),
            ],
        ),
    ),
)
